# software-training

hardware_applications/: CMakeLists.txt
